# OpenGL

./: .gitignore  CMakeLists.txt  Project1.sln
Project1/: Project1.vcxproj  Project1.vcxproj.filters  camera.c  camera.h  game.c  game.h  input.c  input.h  main.c  model.c  model.h  shader.c  shader.h  structs.h  sturcts.h  texture.c  texture.h
source/: Project1.vcxproj  Project1.vcxproj.filters  camera.c  camera.h  game.c  game.h  input.c  input.h  model.c  model.h  shader.c  shader.h  texture.c
